--- a/views/index.html
+++ b/views/index.html
@@ -42,21 +42,21 @@
 			<!-- About the project -->
 			<div id="project-description">
 				<h1>DESCRIPTION</h1>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ullamcorper dolor, at vehicula diam. Nulla nec viverra nisl. Donec aliquam libero vel justo vestibulum, at gravida turpis congue. Duis ornare purus eu ligula blandit condimentum. Proin efficitur, ligula vitae semper commodo, mauris est cursus ex, quis venenatis augue nisl eget risus. Donec dignissim ultrices odio. Nulla pulvinar tincidunt diam at rutrum. Aenean cursus ac enim eget tincidunt.
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ullamcorper dolor, at vehicula diam. Nulla nec viverra nisl. Donec aliquam libero vel justo vestibulum, at gravida turpis congue. Duis ornare purus eu ligula blandit condimentum. Proin efficitur, ligula vitae semper commodo, mauris est cursus ex, quis venenatis augue nisl eget risus. Donec dignissim ultrices odio. Nulla pulvinar tincidunt diam at rutrum. Aenean cursus ac enim eget tincidunt.</p>
 			</div>
 			<hr class="divider">
 
 			<!-- About tech -->
 			<div id="project-technologies">
 				<h1>TECHNOLOGIES</h1>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ullamcorper dolor, at vehicula diam. Nulla nec viverra nisl. Donec aliquam libero vel justo vestibulum, at gravida turpis congue. Duis ornare purus eu ligula blandit condimentum. Proin efficitur, ligula vitae semper commodo, mauris est cursus ex, quis venenatis augue nisl eget risus. Donec dignissim ultrices odio. Nulla pulvinar tincidunt diam at rutrum. Aenean cursus ac enim eget tincidunt.
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ullamcorper dolor, at vehicula diam. Nulla nec viverra nisl. Donec aliquam libero vel justo vestibulum, at gravida turpis congue. Duis ornare purus eu ligula blandit condimentum. Proin efficitur, ligula vitae semper commodo, mauris est cursus ex, quis venenatis augue nisl eget risus. Donec dignissim ultrices odio. Nulla pulvinar tincidunt diam at rutrum. Aenean cursus ac enim eget tincidunt.</p>
 			</div>
 			<hr class="divider">
 
 			<!-- Burndown chart -->
 			<div id="project-burndown">
 				<h1>BURNDOWN CHART</h1>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ullamcorper dolor, at vehicula diam. Nulla nec viverra nisl. Donec aliquam libero vel justo vestibulum, at gravida turpis congue. Duis ornare purus eu ligula blandit condimentum. Proin efficitur, ligula vitae semper commodo, mauris est cursus ex, quis venenatis augue nisl eget risus. Donec dignissim ultrices odio. Nulla pulvinar tincidunt diam at rutrum. Aenean cursus ac enim eget tincidunt.
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ullamcorper dolor, at vehicula diam. Nulla nec viverra nisl. Donec aliquam libero vel justo vestibulum, at gravida turpis congue. Duis ornare purus eu ligula blandit condimentum. Proin efficitur, ligula vitae semper commodo, mauris est cursus ex, quis venenatis augue nisl eget risus. Donec dignissim ultrices odio. Nulla pulvinar tincidunt diam at rutrum. Aenean cursus ac enim eget tincidunt.</p>
 			</div>
 			<hr class="divider">
 
@@ -65,30 +65,54 @@
 				<h1>TEAM</h1>
 				<div class="row">
 					<div class="col-md-4">
-						<img src="http://via.placeholder.com/150x150" class="img-circle" alt="140x140" style="width:150px; height:150px;">
-						<h3>MEMBER #1</h3>
+						<img src="http://farm5.staticflickr.com/4362/36671439560_93e5b068f3_b.jpg" class="img-circle" alt="140x140" style="width:150px; height:150px;">
+						<div id="contact-info">
+							<h3>Aaro Korhonen</h3>
+							<p>Project manager</p>
+							<p>aaro.korhonen@student.tut.fi</p>	
+						</div>
 					</div>
 					<div class="col-md-4">
 						<img src="http://via.placeholder.com/150x150" class="img-circle" alt="140x140" style="width:150px; height:150px;">
-						<h3>MEMBER #2</h3>
+						<div id="contact-info">
+							<h3>MEMBER #2</h3>
+							<p>Title</p>
+							<p>Email</p>	
+						</div>
 					</div>
 					<div class="col-md-4">
 						<img src="http://via.placeholder.com/150x150" class="img-circle" alt="140x140" style="width:150px; height:150px;">
-						<h3>MEMBER #3</h3>
+						<div id="contact-info">
+							<h3>MEMBER #3</h3>
+							<p>Title</p>
+							<p>Email</p>	
+						</div>
 					</div>
 				</div>
 				<div class="row">
 					<div class="col-md-4 wow fadeIn">
 						<img src="http://via.placeholder.com/150x150" class="img-circle" alt="140x140" style="width:150px; height:150px;">
-						<h3>MEMBER #4</h3>
+						<div id="contact-info">
+							<h3>MEMBER #4</h3>
+							<p>Title</p>
+							<p>Email</p>	
+						</div>
 					</div>
 					<div class="col-md-4">
 						<img src="http://via.placeholder.com/150x150" class="img-circle" alt="140x140" style="width:150px; height:150px;">
-						<h3>MEMBER #5</h3>
+						<div id="contact-info">
+							<h3>MEMBER #5</h3>
+							<p>Title</p>
+							<p>Email</p>	
+						</div>
 					</div>
 					<div class="col-md-4">
 						<img src="http://via.placeholder.com/150x150" class="img-circle" alt="140x140" style="width:150px; height:150px;">
-						<h3>MEMBER #6</h3>
+						<div id="contact-info">
+							<h3>MEMBER #6</h3>
+							<p>Title</p>
+							<p>Email</p>	
+						</div>
 					</div>
 				</div>
 			</div>
