--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,28 @@
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+  }
+
+body {
+	font-family: 'Helvetica Neue', 'nimbus-sans', helvetica, sans;
+}
+
 #project-team {
 	text-align: center;
 }
 
+#content {
+	max-width: 700px;
+}
+
+#content p {
+	text-align: justify;
+}
+
 #content h1 {
 	text-align: center;
+	padding: 0.5em;
 }
 
 #top-button {
@@ -12,4 +31,24 @@
 	bottom: 20px;
 	z-index: 1;
 	text-align: center;
+}
+
+#content #contact-info p {
+	text-align: center;
+	letter-spacing: -0.04em;
+	font-weight: 500;
+	font-size: 1em;
+	line-height: 0.6;
+	width: 100%;
+}
+
+#contact-info h3 {
+	font-size: 2em;
+	font-weight: 500;
+	letter-spacing: -0.03em;	
+	width: 100%;
+}
+
+.col-md-4 {
+	padding-bottom: 1em;;
 }
