Add picture of Teemu

--- a/views/index.html
+++ b/views/index.html
@@ -91,11 +91,11 @@
 				</div>
 				<div class="row">
 					<div class="col-md-4 wow fadeIn">
-						<img src="http://via.placeholder.com/150x150" class="img-circle" alt="140x140" style="width:150px; height:150px;">
+						<img src="https://c1.staticflickr.com/5/4395/36956368326_891526ba27_o.jpg" class="img-circle" alt="140x140" style="width:150px; height:150px;">
 						<div id="contact-info">
-							<h3>MEMBER #4</h3>
-							<p>Title</p>
-							<p>Email</p>	
+							<h3>Teemu Kuikka</h3>
+							<p>Developer</p>
+							<p>teemu.kuikka@student.tut.fi</p>	
 						</div>
 					</div>
 					<div class="col-md-4">
