Add picture of Toni

--- a/views/index.html
+++ b/views/index.html
@@ -73,11 +73,11 @@
 						</div>
 					</div>
 					<div class="col-md-4">
-						<img src="http://via.placeholder.com/150x150" class="img-circle" alt="140x140" style="width:150px; height:150px;">
+						<img src="https://c1.staticflickr.com/5/4387/36309947574_e0f22eee83_o.jpg" class="img-circle" alt="140x140" style="width:150px; height:150px;">
 						<div id="contact-info">
-							<h3>MEMBER #2</h3>
-							<p>Title</p>
-							<p>Email</p>	
+							<h3>Toni-Erik Martin</h3>
+							<p>Product owner</p>
+							<p>toni-erik.martin@student.tut.fi</p>	
 						</div>
 					</div>
 					<div class="col-md-4">
