Add project description, names, roles

--- a/views/index.html
+++ b/views/index.html
@@ -22,108 +22,109 @@
   <body>
   	<!-- NAVBAR -->
   	<nav class="navbar navbar-default">
-		  <div class="container">
-		    <div class="navbar-header">
-		      <a class="navbar-brand" href="#">-Project name here-</a>
-		    </div>
-		    <ul class="nav navbar-nav">
-		    	<li><a href="#project-description">Project</a></li>
-		    	<li><a href="#project-technologies">Technologies</a></li>
-		    	<li><a href="#project-burndown">Burndown</a></li>
-		      <li><a href="#project-team">Team</a></li>
-		      <li><a href="#project-contact">Contact</a></li>
-		    </ul>
-		  </div>
-		</nav>
+	  <div class="container">
+	    <div class="navbar-header">
+	      <a class="navbar-brand" href="#">Forestry Game</a>
+	    </div>
+	    <ul class="nav navbar-nav">
+	    	<li><a href="#project-description">Project</a></li>
+	    	<li><a href="#project-technologies">Technologies</a></li>
+	    	<li><a href="#project-team">Team</a></li>
+	    	<li><a href="#project-burndown">Burnup</a></li>
+	    	<li><a href="#project-hours">Hour Log</a></li>
+	    </ul>
+	  </div>
+	</nav>
 
-		<!-- CONTENT -->
-		<div class="container" id="content">
+	<!-- CONTENT -->
+	<div class="container" id="content">
 
-			<!-- About the project -->
-			<div id="project-description">
-				<h1>DESCRIPTION</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ullamcorper dolor, at vehicula diam. Nulla nec viverra nisl. Donec aliquam libero vel justo vestibulum, at gravida turpis congue. Duis ornare purus eu ligula blandit condimentum. Proin efficitur, ligula vitae semper commodo, mauris est cursus ex, quis venenatis augue nisl eget risus. Donec dignissim ultrices odio. Nulla pulvinar tincidunt diam at rutrum. Aenean cursus ac enim eget tincidunt.</p>
-			</div>
-			<hr class="divider">
+		<!-- About the project -->
+		<div id="project-description">
+			<h1>PROJECT</h1>
+			<p>This project is part of TUT's course "TIE-13106 Project Work on Pervasive Systems 2017-2018". The goal of this project is to design and create an educational game for forestry students that can be used to enhance knowledge needed in forwarding cutted trees.</p>
+		</div>
+		<hr class="divider">
 
-			<!-- About tech -->
-			<div id="project-technologies">
-				<h1>TECHNOLOGIES</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ullamcorper dolor, at vehicula diam. Nulla nec viverra nisl. Donec aliquam libero vel justo vestibulum, at gravida turpis congue. Duis ornare purus eu ligula blandit condimentum. Proin efficitur, ligula vitae semper commodo, mauris est cursus ex, quis venenatis augue nisl eget risus. Donec dignissim ultrices odio. Nulla pulvinar tincidunt diam at rutrum. Aenean cursus ac enim eget tincidunt.</p>
-			</div>
-			<hr class="divider">
+		<!-- About tech -->
+		<div id="project-technologies">
+			<h1>TECHNOLOGIES</h1>
+			<p>TBA</p>
+		</div>
+		<hr class="divider">
 
-			<!-- Burndown chart -->
-			<div id="project-burndown">
-				<h1>BURNDOWN CHART</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ullamcorper dolor, at vehicula diam. Nulla nec viverra nisl. Donec aliquam libero vel justo vestibulum, at gravida turpis congue. Duis ornare purus eu ligula blandit condimentum. Proin efficitur, ligula vitae semper commodo, mauris est cursus ex, quis venenatis augue nisl eget risus. Donec dignissim ultrices odio. Nulla pulvinar tincidunt diam at rutrum. Aenean cursus ac enim eget tincidunt.</p>
-			</div>
-			<hr class="divider">
-
-			<!-- About the team -->
-			<div id="project-team">
-				<h1>TEAM</h1>
-				<div class="row">
-					<div class="col-md-4">
-						<img src="http://farm5.staticflickr.com/4362/36671439560_93e5b068f3_b.jpg" class="img-circle" alt="140x140" style="width:150px; height:150px;">
-						<div id="contact-info">
-							<h3>Aaro Korhonen</h3>
-							<p>Project manager</p>
-							<p>aaro.korhonen@student.tut.fi</p>	
-						</div>
-					</div>
-					<div class="col-md-4">
-						<img src="https://c1.staticflickr.com/5/4387/36309947574_e0f22eee83_o.jpg" class="img-circle" alt="140x140" style="width:150px; height:150px;">
-						<div id="contact-info">
-							<h3>Toni-Erik Martin</h3>
-							<p>Product owner</p>
-							<p>toni-erik.martin@student.tut.fi</p>	
-						</div>
-					</div>
-					<div class="col-md-4">
-						<img src="http://via.placeholder.com/150x150" class="img-circle" alt="140x140" style="width:150px; height:150px;">
-						<div id="contact-info">
-							<h3>MEMBER #3</h3>
-							<p>Title</p>
-							<p>Email</p>	
-						</div>
+		<!-- About the team -->
+		<div id="project-team">
+			<h1>TEAM</h1>
+			<div class="row">
+				<div class="col-md-4">
+					<img src="http://farm5.staticflickr.com/4362/36671439560_93e5b068f3_b.jpg" class="img-circle" alt="140x140" style="width:150px; height:150px;">
+					<div id="contact-info">
+						<h3>Aaro Korhonen</h3>
+						<p>Project manager</p>
+						<p>aaro.korhonen@student.tut.fi</p>	
 					</div>
 				</div>
-				<div class="row">
-					<div class="col-md-4 wow fadeIn">
-						<img src="https://c1.staticflickr.com/5/4395/36956368326_891526ba27_o.jpg" class="img-circle" alt="140x140" style="width:150px; height:150px;">
-						<div id="contact-info">
-							<h3>Teemu Kuikka</h3>
-							<p>Developer</p>
-							<p>teemu.kuikka@student.tut.fi</p>	
-						</div>
+				<div class="col-md-4">
+					<img src="https://c1.staticflickr.com/5/4387/36309947574_e0f22eee83_o.jpg" class="img-circle" alt="140x140" style="width:150px; height:150px;">
+					<div id="contact-info">
+						<h3>Toni-Erik Martin</h3>
+						<p>Product owner</p>
+						<p>toni-erik.martin@student.tut.fi</p>	
 					</div>
-					<div class="col-md-4">
-						<img src="http://via.placeholder.com/150x150" class="img-circle" alt="140x140" style="width:150px; height:150px;">
-						<div id="contact-info">
-							<h3>MEMBER #5</h3>
-							<p>Title</p>
-							<p>Email</p>	
-						</div>
-					</div>
-					<div class="col-md-4">
-						<img src="http://via.placeholder.com/150x150" class="img-circle" alt="140x140" style="width:150px; height:150px;">
-						<div id="contact-info">
-							<h3>MEMBER #6</h3>
-							<p>Title</p>
-							<p>Email</p>	
-						</div>
+				</div>
+				<div class="col-md-4">
+					<img src="http://via.placeholder.com/150x150" class="img-circle" alt="140x140" style="width:150px; height:150px;">
+					<div id="contact-info">
+						<h3>Han Feng</h3>
+						<p>UX Designer</p>
+						<p>han.feng@student.tut.fi</p>	
 					</div>
 				</div>
 			</div>
-			<hr class="divider">
-
-			<!-- Contact info -->
-			<div id="project-contact">
-				<h1>CONTACT? NECESSARY?</h1>
-				Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ullamcorper dolor, at vehicula diam. Nulla nec viverra nisl. Donec aliquam libero vel justo vestibulum, at gravida turpis congue. Duis ornare purus eu ligula blandit condimentum. Proin efficitur, ligula vitae semper commodo, mauris est cursus ex, quis venenatis augue nisl eget risus. Donec dignissim ultrices odio. Nulla pulvinar tincidunt diam at rutrum. Aenean cursus ac enim eget tincidunt.
+			<div class="row">
+				<div class="col-md-4 wow fadeIn">
+					<img src="https://c1.staticflickr.com/5/4395/36956368326_891526ba27_o.jpg" class="img-circle" alt="140x140" style="width:150px; height:150px;">
+					<div id="contact-info">
+						<h3>Teemu Kuikka</h3>
+						<p>Developer</p>
+						<p>teemu.kuikka@student.tut.fi</p>	
+					</div>
+				</div>
+				<div class="col-md-4">
+					<img src="http://via.placeholder.com/150x150" class="img-circle" alt="140x140" style="width:150px; height:150px;">
+					<div id="contact-info">
+						<h3>Antti Heinonen</h3>
+						<p>Developer</p>
+						<p>antti.heinonen@student.tut.fi</p>	
+					</div>
+				</div>
+				<div class="col-md-4">
+					<img src="http://via.placeholder.com/150x150" class="img-circle" alt="140x140" style="width:150px; height:150px;">
+					<div id="contact-info">
+						<h3>Oiva Moisio</h3>
+						<p>Developer</p>
+						<p>oiva.moisio@student.tut.fi</p>	
+					</div>
+				</div>
 			</div>
-			<button class="btn btn-lg" onclick="topFunction()" id="top-button" title="Go to top">Back to top</button>
-		</div>	
+		</div>
+		<hr class="divider">
+
+		<!-- Burndown chart -->
+		<div id="project-burndown">
+			<h1>BURNUP CHART</h1>
+			<img src="http://via.placeholder.com/600x300">
+		</div>
+
+		<hr class="divider">
+		<!-- Project hour tracking -->
+		<div id="project-hours">
+			<h1>HOURS</h1>
+			<iframe src=""></iframe>
+			<p>Hours are divided to following categories: Documentation (DOC), Requirements gathering (REQ), Design (DES), Implementation (IMP), Testing (TEST), Meetings (MEET), Studying eg. technology (STU), Lectures (LEC) and Other (OTH).</p>
+		</div>
+		<button class="btn btn-lg" onclick="topFunction()" id="top-button" title="Go to top">Back to top</button>
+	</div>	
   </body>
 </html>
