Add picture of Antti

--- a/views/index.html
+++ b/views/index.html
@@ -92,7 +92,7 @@
 					</div>
 				</div>
 				<div class="col-md-4">
-					<img src="http://via.placeholder.com/150x150" class="img-circle" alt="140x140" style="width:150px; height:150px;">
+					<img src="https://c1.staticflickr.com/5/4419/37170060405_90ed32138e_o.jpg" class="img-circle" alt="140x140" style="width:150px; height:150px;">
 					<div id="contact-info">
 						<h3>Antti Heinonen</h3>
 						<p>Developer</p>
