--- a/views/index.html
+++ b/views/index.html
@@ -121,8 +121,11 @@
 		<!-- Project hour tracking -->
 		<div id="project-hours">
 			<h1>HOURS</h1>
-			<iframe src=""></iframe>
+			<iframe id="iframe-hours" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS71cYTapHq0VXKJNsD9H-kpQz5kMuBQFFQ_GbJ9OMsmkIIhEqDmNiMb1ESnEVjJ8wb5Vu3mGATiZJ1/pubhtml?gid=525937980&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 			<p>Hours are divided to following categories: Documentation (DOC), Requirements gathering (REQ), Design (DES), Implementation (IMP), Testing (TEST), Meetings (MEET), Studying eg. technology (STU), Lectures (LEC) and Other (OTH).</p>
+			<p>
+				<a href="https://docs.google.com/spreadsheets/d/1BCdxHuxIpt-4L_uk0i-dureHQkOyR8cZDAOtaooDTjY/edit?usp=sharing">Link</a> to the full sheet.
+			</p>
 		</div>
 		<button class="btn btn-lg" onclick="topFunction()" id="top-button" title="Go to top">Back to top</button>
 	</div>	
