--- a/views/index.html
+++ b/views/index.html
@@ -21,10 +21,10 @@
   </head>
   <body>
   	<!-- NAVBAR -->
-  	<nav class="navbar navbar-default">
+  	<nav class="navbar navbar-fixed-top navbar-default navbar-custom">
 	  <div class="container">
 	    <div class="navbar-header">
-	      <a class="navbar-brand" href="#">Forestry Game</a>
+	    	<a class="navbar-brand" href="#" onclick="topFunction()">Forestry Game</a>
 	    </div>
 	    <ul class="nav navbar-nav">
 	    	<li><a href="#project-description">Project</a></li>
@@ -44,14 +44,14 @@
 			<h1>PROJECT</h1>
 			<p>This project is part of TUT's course "TIE-13106 Project Work on Pervasive Systems 2017-2018". The goal of this project is to design and create an educational game for forestry students that can be used to enhance knowledge needed in forwarding cutted trees.</p>
 		</div>
-		<hr class="divider">
+		<hr class="divider" style="border-color: rgb(50,150,50);">
 
 		<!-- About tech -->
 		<div id="project-technologies">
 			<h1>TECHNOLOGIES</h1>
 			<p>TBA</p>
 		</div>
-		<hr class="divider">
+		<hr class="divider" style="border-color: rgb(50,150,50);">
 
 		<!-- About the team -->
 		<div id="project-team">
@@ -109,7 +109,7 @@
 				</div>
 			</div>
 		</div>
-		<hr class="divider">
+		<hr class="divider" style="border-color: rgb(50,150,50);">
 
 		<!-- Burndown chart -->
 		<div id="project-burndown">
@@ -117,14 +117,13 @@
 			<img src="http://via.placeholder.com/600x300">
 		</div>
 
-		<hr class="divider">
+		<hr class="divider" style="border-color: rgb(50,150,50);">
 		<!-- Project hour tracking -->
 		<div id="project-hours">
 			<h1>HOURS</h1>
 			<iframe src=""></iframe>
 			<p>Hours are divided to following categories: Documentation (DOC), Requirements gathering (REQ), Design (DES), Implementation (IMP), Testing (TEST), Meetings (MEET), Studying eg. technology (STU), Lectures (LEC) and Other (OTH).</p>
 		</div>
-		<button class="btn btn-lg" onclick="topFunction()" id="top-button" title="Go to top">Back to top</button>
-	</div>	
+	</div>
   </body>
 </html>
