Add picture of Han

--- a/views/index.html
+++ b/views/index.html
@@ -74,10 +74,10 @@
 					</div>
 				</div>
 				<div class="col-md-4">
-					<img src="http://via.placeholder.com/150x150" class="img-circle" alt="140x140" style="width:150px; height:150px;">
+					<img src="https://farm5.staticflickr.com/4428/36888111610_bb7b3b6527_z.jpg" class="img-circle" alt="140x140" style="width:150px; height:150px;">
 					<div id="contact-info">
 						<h3>Han Feng</h3>
-						<p>UX Designer</p>
+						<p>QA lead</p>
 						<p>han.feng@student.tut.fi</p>	
 					</div>
 				</div>
