--- a/views/index.html
+++ b/views/index.html
@@ -40,86 +40,82 @@
 	<div class="container" id="content">
 
 		<!-- About the project -->
-		<div id="project-description">
+		<div class="segment" id="project-description">
 			<h1>PROJECT</h1>
 			<p>This project is part of TUT's course "TIE-13106 Project Work on Pervasive Systems 2017-2018". The goal of this project is to design and create an educational game for forestry students that can be used to enhance knowledge needed in forwarding cutted trees.</p>
 		</div>
-		<hr class="divider" style="border-color: rgb(50,150,50);">
 
 		<!-- About tech -->
-		<div id="project-technologies">
+		<div class="segment" id="project-technologies">
 			<h1>TECHNOLOGIES</h1>
 			<p>TBA</p>
 		</div>
-		<hr class="divider" style="border-color: rgb(50,150,50);">
 
 		<!-- About the team -->
-		<div id="project-team">
+		<div class="segment" id="project-team">
 			<h1>TEAM</h1>
 			<div class="row">
-				<div class="col-md-4">
-					<img src="http://farm5.staticflickr.com/4362/36671439560_93e5b068f3_b.jpg" class="img-circle" alt="140x140" style="width:150px; height:150px;">
-					<div id="contact-info">
+				<div class="col-sm-4">
+					<img src="http://farm5.staticflickr.com/4362/36671439560_93e5b068f3_b.jpg" class="img-circle" alt="140x140">
+					<div class="contact-info">
 						<h3>Aaro Korhonen</h3>
-						<p>Project manager</p>
-						<p>aaro.korhonen@student.tut.fi</p>	
+						<p class="contact-info-2">Project manager</p>
+						<p class="contact-info-2">aaro.korhonen@student.tut.fi</p>	
 					</div>
 				</div>
-				<div class="col-md-4">
-					<img src="https://c1.staticflickr.com/5/4387/36309947574_e0f22eee83_o.jpg" class="img-circle" alt="140x140" style="width:150px; height:150px;">
-					<div id="contact-info">
+				<div class="col-sm-4">
+					<img src="https://c1.staticflickr.com/5/4387/36309947574_e0f22eee83_o.jpg" class="img-circle" alt="140x140">
+					<div class="contact-info">
 						<h3>Toni-Erik Martin</h3>
-						<p>Product owner</p>
-						<p>toni-erik.martin@student.tut.fi</p>	
+						<p class="contact-info-2">Product owner</p>
+						<p class="contact-info-2">toni-erik.martin@student.tut.fi</p>	
 					</div>
 				</div>
-				<div class="col-md-4">
-					<img src="https://farm5.staticflickr.com/4388/37096051926_26b3c2dfed_m.jpg" class="img-circle" alt="140x140" style="width:150px; height:150px;">
-					<div id="contact-info">
+				<div class="col-sm-4">
+					<img src="https://farm5.staticflickr.com/4388/37096051926_26b3c2dfed_m.jpg" class="img-circle" alt="140x140">
+					<div class="contact-info">
 						<h3>Han Feng</h3>
-						<p>QA lead</p>
-						<p>han.feng@student.tut.fi</p>	
+						<p class="contact-info-2">QA lead</p>
+						<p class="contact-info-2">han.feng@student.tut.fi</p>	
 					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-4 wow fadeIn">
-					<img src="https://c1.staticflickr.com/5/4395/36956368326_891526ba27_o.jpg" class="img-circle" alt="140x140" style="width:150px; height:150px;">
-					<div id="contact-info">
+				<div class="col-sm-4 wow fadeIn">
+					<img src="https://c1.staticflickr.com/5/4395/36956368326_891526ba27_o.jpg" class="img-circle" alt="140x140">
+					<div class="contact-info">
 						<h3>Teemu Kuikka</h3>
-						<p>Developer</p>
-						<p>teemu.kuikka@student.tut.fi</p>	
+						<p class="contact-info-2">Developer</p>
+						<p class="contact-info-2">teemu.kuikka@student.tut.fi</p>	
 					</div>
 				</div>
-				<div class="col-md-4">
-					<img src="https://c1.staticflickr.com/5/4419/37170060405_90ed32138e_o.jpg" class="img-circle" alt="140x140" style="width:150px; height:150px;">
-					<div id="contact-info">
+				<div class="col-sm-4">
+					<img src="https://c1.staticflickr.com/5/4419/37170060405_90ed32138e_o.jpg" class="img-circle" alt="140x140">
+					<div class="contact-info">
 						<h3>Antti Heinonen</h3>
-						<p>Developer</p>
-						<p>antti.heinonen@student.tut.fi</p>	
+						<p class="contact-info-2">Developer</p>
+						<p class="contact-info-2">antti.heinonen@student.tut.fi</p>	
 					</div>
 				</div>
-				<div class="col-md-4">
-					<img src="http://via.placeholder.com/150x150" class="img-circle" alt="140x140" style="width:150px; height:150px;">
-					<div id="contact-info">
+				<div class="col-sm-4">
+					<img src="http://via.placeholder.com/150x150" class="img-circle" alt="140x140">
+					<div class="contact-info">
 						<h3>Oiva Moisio</h3>
-						<p>Developer</p>
-						<p>oiva.moisio@student.tut.fi</p>	
+						<p class="contact-info-2">Developer</p>
+						<p class="contact-info-2">oiva.moisio@student.tut.fi</p>	
 					</div>
 				</div>
 			</div>
 		</div>
-		<hr class="divider" style="border-color: rgb(50,150,50);">
 
 		<!-- Burndown chart -->
-		<div id="project-burndown">
+		<div class="segment" id="project-burndown">
 			<h1>BURNUP CHART</h1>
 			<img src="http://via.placeholder.com/600x300">
 		</div>
 
-		<hr class="divider" style="border-color: rgb(50,150,50);">
 		<!-- Project hour tracking -->
-		<div id="project-hours">
+		<div class="segment" id="project-hours">
 			<h1>HOURS</h1>
 			<iframe id="iframe-hours" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vS71cYTapHq0VXKJNsD9H-kpQz5kMuBQFFQ_GbJ9OMsmkIIhEqDmNiMb1ESnEVjJ8wb5Vu3mGATiZJ1/pubhtml?gid=525937980&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 			<p>Hours are divided to following categories: Documentation (DOC), Requirements gathering (REQ), Design (DES), Implementation (IMP), Testing (TEST), Meetings (MEET), Studying eg. technology (STU), Lectures (LEC) and Other (OTH).</p>
