--- a/views/index.html
+++ b/views/index.html
@@ -98,7 +98,7 @@
 					</div>
 				</div>
 				<div class="col-sm-4">
-					<img src="http://via.placeholder.com/150x150" class="img-circle" alt="140x140">
+					<img src="https://c1.staticflickr.com/5/4408/37299081355_afe8fb5f8a_b.jpg" class="img-circle" alt="140x140">
 					<div class="contact-info">
 						<h3>Oiva Moisio</h3>
 						<p class="contact-info-2">Developer</p>
