--- a/views/index.html
+++ b/views/index.html
@@ -48,7 +48,19 @@
 		<!-- About tech -->
 		<div class="segment" id="project-technologies">
 			<h1>TECHNOLOGIES</h1>
-			<p>TBA</p>
+			<div class="project-technologies-part">
+				<h2>Backend</h2>
+				<ul>
+					<li>Django</li>
+				</ul>
+			</div>
+			<div class="project-technologies-part">
+				<h2>Frontend</h2>
+				<ul>
+					<li>React</li>
+					<li>Pixi.js</li>
+				</ul>
+			</div>
 		</div>
 
 		<!-- About the team -->
