--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -41,7 +41,7 @@ nav {
 	flex-grow: 1;
 }
 
-#project-team, #project-burndown, #project-hours {
+#project-team, #project-burndown, #project-hours, #project-technologies {
 	text-align: center;
 }
 
@@ -71,6 +71,21 @@ h1 {
 	border-radius: 5px;
 	margin-bottom: 40px;
 	text-shadow: 1px 1px 4px #eee;
+}
+
+h2 {
+	color: #1B7943;
+
+}
+
+ul {
+    list-style-position: inside;
+}
+
+.project-technologies-part {
+	display: inline-block;
+	width: 30%;
+	vertical-align: top;
 }
 
 #top-button {
