--- a/views/index.html
+++ b/views/index.html
@@ -123,7 +123,10 @@
 		<!-- Burndown chart -->
 		<div class="segment" id="project-burndown">
 			<h1>BURNUP CHART</h1>
-			<img src="http://via.placeholder.com/600x300">
+			<h2>Project burnup</h2>
+			<img src="https://farm5.staticflickr.com/4446/37801496376_006fbd0b6d_b.jpg" style="width: 800px;">
+			<h2>Sprint 0 burndown</h2>
+			<img src="https://farm5.staticflickr.com/4504/37818199082_2668e0330c_h.jpg" style="width: 800px;">
 		</div>
 
 		<!-- Project hour tracking -->
