Updatet burnup charts

--- a/views/index.html
+++ b/views/index.html
@@ -123,10 +123,11 @@
 		<!-- Burndown chart -->
 		<div class="segment" id="project-burndown">
 			<h1>BURNUP CHART</h1>
-			<h2>Project burnup</h2>
-			<img src="https://farm5.staticflickr.com/4446/37801496376_006fbd0b6d_b.jpg" style="width: 800px;">
-			<h2>Sprint 0 burndown</h2>
-			<img src="https://farm5.staticflickr.com/4504/37818199082_2668e0330c_h.jpg" style="width: 800px;">
+			<h2>Sprint 0 burnup</h2>
+			<img src="https://farm5.staticflickr.com/4476/37404840684_494b4f6457_b.jpg">
+			<hr>
+			<h2>Sprint 1 burnup</h2>
+			<img src="https://farm5.staticflickr.com/4481/24261659218_1731335d60_b.jpg">
 		</div>
 
 		<!-- Project hour tracking -->
