--- a/views/index.html
+++ b/views/index.html
@@ -128,6 +128,9 @@
 			<hr>
 			<h2>Sprint 1 burnup</h2>
 			<img src="https://farm5.staticflickr.com/4481/24261659218_1731335d60_b.jpg">
+			<hr>
+			<h2>Sprint 2 burnup</h2>
+			<img src="https://farm5.staticflickr.com/4534/37855157985_4793bf95b8_b.jpg">
 		</div>
 
 		<!-- Project hour tracking -->
