--- a/views/index.html
+++ b/views/index.html
@@ -32,6 +32,7 @@
 	    	<li><a href="#project-team">Team</a></li>
 	    	<li><a href="#project-burndown">Burnup</a></li>
 	    	<li><a href="#project-hours">Hour Log</a></li>
+	    	<li><a href="#project-deployment">Product</a></li>
 	    </ul>
 	  </div>
 	</nav>
@@ -141,6 +142,12 @@
 			<p>
 				<a href="https://docs.google.com/spreadsheets/d/1BCdxHuxIpt-4L_uk0i-dureHQkOyR8cZDAOtaooDTjY/edit?usp=sharing">Link</a> to the full sheet.
 			</p>
+		</div>
+
+		<!-- Currently deployed product -->
+		<div class="segment" id="project-deployment">
+			<h1>Product</h1>
+			<p>Currently deployed product can be found <a target="_blank" href="https://forestry-game-backend.herokuapp.com/">here</a>.</p>
 		</div>
 	</div>
   </body>
