--- a/views/index.html
+++ b/views/index.html
@@ -132,6 +132,9 @@
 			<hr>
 			<h2>Sprint 2 burnup</h2>
 			<img src="https://farm5.staticflickr.com/4534/37855157985_4793bf95b8_b.jpg">
+			<hr>
+			<h2>Sprint 3 burnup</h2>
+			<img src="https://farm5.staticflickr.com/4641/25391133948_b7679e33c6_b.jpg">
 		</div>
 
 		<!-- Project hour tracking -->
