--- a/views/index.html
+++ b/views/index.html
@@ -135,6 +135,9 @@
 			<hr>
 			<h2>Sprint 3 burnup</h2>
 			<img src="https://farm5.staticflickr.com/4641/25391133948_b7679e33c6_b.jpg">
+			<hr>
+			<h2>Sprint 4 burnup</h2>
+			<img src="https://farm5.staticflickr.com/4701/24816196227_1f060f237e_b.jpg">
 		</div>
 
 		<!-- Project hour tracking -->
