--- a/views/index.html
+++ b/views/index.html
@@ -138,6 +138,9 @@
 			<hr>
 			<h2>Sprint 4 burnup</h2>
 			<img src="https://farm5.staticflickr.com/4621/24816325727_9abebf34bf_b.jpg">
+			<hr>
+			<h2>Sprint 5 burnup</h2>
+			<img src="https://farm5.staticflickr.com/4624/26202575358_97d59f496d_b.jpg">
 		</div>
 
 		<!-- Project hour tracking -->
