Project burnup chart

--- a/views/index.html
+++ b/views/index.html
@@ -124,6 +124,9 @@
 		<!-- Burndown chart -->
 		<div class="segment" id="project-burndown">
 			<h1>BURNUP CHART</h1>
+			<h2>Project burnup</h2>
+			<img src="https://farm5.staticflickr.com/4768/39178686875_78c0729f26_b.jpg">
+			<hr>
 			<h2>Sprint 0 burnup</h2>
 			<img src="https://farm5.staticflickr.com/4476/37404840684_494b4f6457_b.jpg">
 			<hr>
